Revision history Bot::BasicBot

{{$NEXT}}
  - Ignore empty strings returned by said()
  - Adjust the method documentation a bit to avoid confusion

0.83  Fri Nov 5 12:40:00 CET 2010
  - Applied patch from Mario Domgörgen to use log() for warnings (RT #51804)
  - Only ignore said() when it returns undef/empty list, not false
  - got_names was never getting called. Fixed that.
  - Skip connect.t for now. I should rewrite it to use poco-server-irc...

0.82  Wed Nov 3 02:09:36 GMT 2010
  - Maintainership moved from cpan:TOMI to cpan:HINRIK
  - Use POE::Component::IRC's Connector plugin to handle reconnects. This
    fixes the endless reconnect loop when trying to shut down the bot
  - Kill subprocesses (e.g. those created by forkit()) on shutdown
  - Migrate distribution to Dist::Zilla
  - Eliminate bogus "NAMES HASH(0x1234567)" queries the bot was making after
    joining a channel

0.81 2009/01/26
  - Implement remove_from_all_channels, you idiot. Sigh.

0.80 2009/01/22
  - Understand quit messages - https://rt.cpan.org/Ticket/Display.html?id=42625
  - Fix the ->name method on the bot to actually return something sensible - https://rt.cpan.org/Ticket/Display.html?id=27427
  - Try to avoid zombie children on forking - https://rt.cpan.org/Public/Bug/Display.html?id=38010

0.70 2006/06/11
  - Updates for new PoDo::IRC
  - No longer do 2 server connects on startup
  - the connect test doesn't break itself by faking a connection first

0.65 2005/08/11
  - Added raw_nick support and a tiny amount of documentation
  - Support for SSL, contributed by Bradley M. Kuhn <bkuhn@softwarefreedom.org>

0.61 2005/05/13
  - Fix for the odd behaviour of freenode - we ask the server for the time
    periodically to catch servers that don't send pings.

0.60 2005/03/21
  - Charset support
  - use Text::Wrap to split up really long responses, instead of a
    nasty regexp, so we split on spaces properly.

0.50 2004/12/01 (revision 1366)
  - Real (almost) tests